<resources>
    <string name="app_name">JMO</string>
    <string name="txt_app_motto">Aplikasi Resmi Layanan Digital \nBPJAMSOSTEK</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_desc">Silakan login untuk masuk aplikasi</string>
    <string name="txt_login_failed_email">Login gagal. Email yang digunakan salah/tidak terdaftar. Silakan coba lagi.</string>
    <string name="txt_login_failed_password">Login gagal. Password yang digunakan salah/tidak terdaftar. Silakan coba lagi.</string>
    <string name="txt_login_success">Login berhasil. Silakan login untuk menikmati fitur-fitur JMO.</string>
    <string name="txt_register">Register</string>
    <string name="txt_register_desc">Silakan mendaftar untuk menggunakan aplikasi</string>
    <string name="text_register_success">Pendaftaran akun berhasil. Yuk login dan nikmati pengalaman menggunakan JMO.</string>
    <string name="txt_home">Beranda</string>
    <string name="txt_news">Berita</string>
    <string name="txt_digital_card">Kartu Digital</string>
    <string name="txt_digital_card_under_development">%1$s sedang dalam tahap pengembangan</string>
    <string name="txt_profile">Profil Saya</string>
    <string name="txt_your_name">Nama Anda</string>
    <string name="txt_name_ex">Mis: John Doe</string>
    <string name="txt_your_email">Email Anda</string>
    <string name="txt_email_ex">Mis: emailanda@domain.com</string>
    <string name="txt_password">Kata Sandi</string>
    <string name="txt_show_password">Tampilkan Kata Sandi</string>
    <string name="txt_create_account">Buat Akun</string>
    <string name="txt_have_account_login">Sudah Punya Akun? Masuk</string>
    <string name="txt_close">Tutup</string>
    <string name="txt_oke">Oke</string>
    <string name="txt_profile_name">Taufik Hidayat</string>
    <string name="txt_profile_facilities">JHT, JKK, JKM, JKP, JP</string>
    <string name="txt_card_identity">KTP/Paspor</string>
    <string name="txt_card_identity_number">1234567891012131</string>
    <string name="txt_phone">Nomor Hp</string>
    <string name="txt_phone_number">085296257704</string>
    <string name="txt_change_profile">Ubah Profil</string>
    <string name="txt_your_digital_card">Kartu Digital Anda</string>
    <string name="txt_term_condition">Syarat dan Ketentuan</string>
    <string name="txt_privacy_policy">Kebijakan dan Privasi</string>
    <string name="txt_about_app">Tentang Aplikasi</string>
    <string name="txt_logout">Keluar</string>
    <string name="txt_logout_desc">Apakah Anda yakin ingin logout?</string>
    <string name="txt_yes">Ya</string>
    <string name="txt_cancel">Batalkan</string>
    <string name="txt_eWallet">e-Wallet</string>
    <string name="txt_service_program">Program Layanan</string>
    <string name="txt_other_service">Layanan Lainnya</string>
    <string name="txt_other_program">Program Lainnya</string>
    <string name="txt_information">Informasi</string>
    <string name="txt_bpjamsostek_program">Program BP Jamsostek</string>
    <string name="txt_old_days_guarantee">Jaminan Hari Tua</string>
    <string name="txt_accidental_guarantee">Jaminan Kecelakaan Kerja</string>
    <string name="txt_death_guarantee">Jaminan Kematian</string>
    <string name="txt_retirement_guarantee">Jaminan Pensiun</string>
    <string name="txt_loss_of_a_job_guarantee">Jaminan Kehilangan Pekerjaan</string>
    <string name="txt_guarantee_desc">Anda sudah terdaftar di layanan ini</string>
    <string name="txt_program_info">Info Program</string>
    <string name="txt_auto_debit_pay">Bayar/Autodebit</string>
    <string name="txt_register_bpu">Daftar BPU</string>
    <string name="txt_update_data">Pengkinian Data</string>
    <string name="txt_branch_office">Kantor Cabang</string>
    <string name="txt_service_partner">Mitra Layanan</string>
    <string name="txt_complaint">Pengaduan</string>
    <string name="txt_help">Bantuan</string>
    <string name="txt_other_menu">Menu Lainnya</string>
    <string name="txt_headline_news">Berita Terbaru</string>
    <string name="txt_other_news">Berita Lainnya</string>
    <string name="txt_oops">Oops! Terdapat kesalahan…</string>
    <string name="txt_retry">Coba Lagi</string>
    <string name="txt_result_could_not_loaded">Hasil gagal dimuat</string>
    <string name="txt_results_not_found">Hasil tidak ditemukan</string>
</resources>