<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.fragment.LoginFragment">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/txt_login"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_outline_android"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/imgLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_login_desc"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_your_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDesc"
        app:layout_constraintStart_toStartOf="@id/tvLogin" />

    <com.yumtaufikhidayat.jmo.utils.MaterialCustomEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_outline_email"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/txt_email_ex"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:autofillHints="emailAddress"
        android:nextFocusDown="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/tvLogin" />

    <com.yumtaufikhidayat.jmo.utils.MaterialCustomEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_outline_key"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/txt_password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/matte_green_darker"
        android:text="@string/txt_show_password"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <com.yumtaufikhidayat.jmo.utils.MaterialCustomButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/cbShowPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_create_account"
        android:textStyle="bold"
        android:textColor="@color/matte_green_darker"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/matte_green_darker"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>