<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.fragment.ProfileFragment">

    <include
        android:id="@+id/toolbarProfile"
        layout="@layout/toolbar_main_general"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarProfile">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">
            
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideCardProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5"/>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_profile_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProfileFacilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/txt_profile_facilities"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvProfileName"
                app:layout_constraintStart_toStartOf="@id/tvProfileName"
                app:layout_constraintEnd_toEndOf="@id/tvProfileName"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCardIdentity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_card"
                app:layout_constraintTop_toBottomOf="@id/tvProfileFacilities"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCardIdentity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/txt_card_identity"
                app:layout_constraintTop_toTopOf="@id/imgCardIdentity"
                app:layout_constraintStart_toEndOf="@id/imgCardIdentity"
                app:layout_constraintEnd_toEndOf="@id/guideCardProfile"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCardIdentityNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_card_identity_number"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvCardIdentity"
                app:layout_constraintStart_toStartOf="@id/tvCardIdentity"
                app:layout_constraintEnd_toEndOf="@id/tvCardIdentity"/>

            <View
                android:id="@+id/viewDivider"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="@id/imgCardIdentity"
                app:layout_constraintBottom_toBottomOf="@id/tvCardIdentityNumber"
                app:layout_constraintStart_toStartOf="@id/guideCardProfile"
                app:layout_constraintEnd_toEndOf="@id/guideCardProfile"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProfilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_phone"
                app:layout_constraintTop_toTopOf="@id/imgCardIdentity"
                app:layout_constraintStart_toStartOf="@id/guideCardProfile"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProfilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/txt_phone"
                app:layout_constraintTop_toTopOf="@id/imgProfilePhone"
                app:layout_constraintStart_toEndOf="@id/imgProfilePhone"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProfilePhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone_number"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvProfilePhone"
                app:layout_constraintStart_toStartOf="@id/tvProfilePhone"
                app:layout_constraintEnd_toEndOf="@id/tvProfilePhone"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        tools:listitem="@layout/item_profile_menu"
        app:layout_constraintTop_toBottomOf="@id/cardProfileInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cardProfileInfo"
        app:layout_constraintEnd_toEndOf="@id/cardProfileInfo"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>