<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.home.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgHomeLogo"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/jmo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgEWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_wallet"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/imgHomeLogo"
            app:layout_constraintBottom_toBottomOf="@id/imgHomeLogo"
            app:layout_constraintEnd_toStartOf="@id/tvEWallet"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_eWallet"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/imgEWallet"
            app:layout_constraintBottom_toBottomOf="@id/imgEWallet"
            app:layout_constraintEnd_toStartOf="@id/imgNotification"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_notifications"
            app:layout_constraintTop_toTopOf="@id/imgEWallet"
            app:layout_constraintBottom_toBottomOf="@id/imgEWallet"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvServiceProgram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_service_program"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imgHomeLogo"
            app:layout_constraintStart_toStartOf="@id/imgHomeLogo"
            app:layout_constraintEnd_toEndOf="@id/imgNotification"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServiceProgram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_service_program"
            tools:itemCount="2"
            app:layout_constraintTop_toBottomOf="@id/tvServiceProgram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOtherPrograms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_other_program"
            android:textColor="@color/matte_green_darker"
            android:background="@drawable/bg_button_home"
            app:layout_constraintTop_toBottomOf="@id/rvServiceProgram"
            app:layout_constraintStart_toStartOf="@id/tvServiceProgram"
            app:layout_constraintEnd_toEndOf="@id/tvServiceProgram"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtherService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_other_service"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnOtherPrograms"
            app:layout_constraintStart_toStartOf="@id/imgHomeLogo"
            app:layout_constraintEnd_toEndOf="@id/imgNotification"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOtherService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:listitem="@layout/item_other_service"
            tools:itemCount="4"
            app:spanCount="4"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvOtherService"
            app:layout_constraintStart_toStartOf="@id/tvServiceProgram"
            app:layout_constraintEnd_toEndOf="@id/tvServiceProgram"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rvOtherService"
            app:layout_constraintStart_toStartOf="@id/imgHomeLogo"
            app:layout_constraintEnd_toEndOf="@id/imgNotification"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpInformation"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvInformation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/llDotsIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/vpInformation"
            app:layout_constraintStart_toStartOf="@id/vpInformation"
            app:layout_constraintEnd_toEndOf="@id/vpInformation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>